update font to barlow

--- a/public/custom/decrypt.html
+++ b/public/custom/decrypt.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Cabin+Condensed" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Barlow+Condensed" rel="stylesheet">
 
 
     <script src="/socket.io/socket.io.js"></script>
@@ -21,7 +21,7 @@
         margin: auto;
         color: white;
         text-shadow: 0 0 20px black;
-        font-family: 'Cabin Condensed', 'sans';
+        font-family: 'Barlow Condensed', 'sans';
         font-size: 30px;
       }
 
