--- a/public/pages/registry/textOverlay/list.html
+++ b/public/pages/registry/textOverlay/list.html
@@ -28,12 +28,26 @@
             </div>
 
             <div style="word-break: break-all; " class="col-sm-6">
-              <div style="margin: 0; font-size: 11px; font-weight: 400; text-transform: uppercase; letter-spacing: 1px; margin-bottom: 3px;">{{commons.translate('html')}}</div>
+              <div style="margin: 0; font-size: 11px; font-weight: 400; text-transform: uppercase; letter-spacing: 1px; margin-bottom: 3px;">
+                <button class="btn btn-sm border-0" :class="[item.show === 'html' ? 'btn-dark' : 'btn-outline-dark' ]" @click="item.show = 'html'; rerender()">HTML</button>
+                <button class="btn btn-sm border-0" :class="[item.show === 'js' ? 'btn-dark' : 'btn-outline-dark' ]" @click="item.show = 'js'; rerender()">JS</button>
+                <button class="btn btn-sm border-0" :class="[item.show === 'css' ? 'btn-dark' : 'btn-outline-dark' ]" @click="item.show = 'css'; rerender()">CSS</button>
+              </div>
 
-              <template v-show="item.text.length > 0">
-                <pre :style="{ display: !showMore.includes(item._id) ? 'none': 'inherit'}"><code class="language-markup">{{ item.text }}</code></pre>
-                <pre :style="{ display: showMore.includes(item._id) ? 'none': 'inherit'}"><code class="language-markup">{{ item.text | less }}</code></pre>
-              </template>
+              <div v-if="item.text.length > 0 && item.show === 'html'">
+                <pre :key="Math.random()" :style="{ display: !showMore.includes(item._id) ? 'none': 'inherit'}"><code class="language-markup">{{ item.text }}</code></pre>
+                <pre :key="Math.random()" :style="{ display: showMore.includes(item._id) ? 'none': 'inherit'}"><code class="language-markup">{{ less(item.text, 'html') }}</code></pre>
+              </div>
+
+              <div v-if="item.css.length > 0 && item.show === 'css'">
+                <pre :key="Math.random()" :style="{ display: !showMore.includes(item._id) ? 'none': 'inherit'}"><code class="language-css">{{ item.css }}</code></pre>
+                <pre :key="Math.random()" :style="{ display: showMore.includes(item._id) ? 'none': 'inherit'}"><code class="language-css">{{ less(item.css, 'css') }}</code></pre>
+              </div>
+
+              <div v-if="item.js.length > 0 && item.show === 'js'">
+                <pre :key="Math.random()" :style="{ display: !showMore.includes(item._id) ? 'none': 'inherit'}"><code class="language-javascript">{{ item.js }}</code></pre>
+                <pre :key="Math.random()" :style="{ display: showMore.includes(item._id) ? 'none': 'inherit'}"><code class="language-javascript">{{ less(item.js, 'js') }}</code></pre>
+              </div>
             </div>
           </div>
 
@@ -86,6 +100,7 @@
       created: function () {
         this.socket.emit('find', { collection: 'data' }, (err, items) => {
           this.items = _.orderBy(items, 'name', 'asc')
+          this.items.map(o => { o.show = 'html'; return o })
           this.$nextTick(function () {
             Prism.highlightAll()
           })
@@ -93,6 +108,20 @@
         if (localStorage.getItem('/overlays/text/showAs')) this.showAs = JSON.parse(localStorage.getItem('/overlays/text/showAs'));
       },
       methods: {
+        less: function (value, type) {
+          const comments = {
+            'js': { start: '/*', end: '*/' },
+            'css': { start: '/*', end: '*/' },
+            'html': { start: '<!--', end: '-->' }
+          }
+          const lines = value.split(/\r?\n/g)
+          value = lines.slice(0, 5).join('\n')
+
+          if (lines.length - 5 > 0) {
+            value += '\n\n' + comments[type].start + ' '  + (lines.length - 5) + ' lines hidden, click show more ' + comments[type].end
+          }
+          return value
+        },
         toggleShowMore: function (_id) {
           let idx = this.showMore.indexOf(_id)
           if(idx !== -1) {
@@ -100,12 +129,23 @@
           } else {
             this.showMore.push(_id)
           }
+          this.$nextTick(() => {
+            Prism.highlightAll()
+          })
         },
         remove: function (_id) {
           this.socket.emit('delete', { _id }, () => {
             this.items = this.items.filter(o => o._id != _id)
           })
         },
+        rerender: function () {
+          this.$nextTick(() => {
+            this.$forceUpdate()
+            this.$nextTick(() => {
+              Prism.highlightAll()
+            })
+          })
+        }
       },
       watch: {
         showAs: function(val) {
@@ -113,11 +153,6 @@
         }
       },
       filters: {
-        less: function (value) {
-          value = value.split(/\r?\n/g).slice(0, 5).join('\n')
-          value += '\n\n<!-- '  + (value.length - 5) + ' lines hidden, click show more -->'
-          return value
-        },
         capitalize: function (value) {
           if (!value) return ''
           value = value.toString()
